# research-skills

./: .gitignore  AGENTS.md  AGENTS_TO_SKILLS_MIGRATION_PLAN.md  BUG_FIX_SUMMARY.md  CLAUDE.md  DEPLOY.md  LITERATURE_TOOLS_BUG_REPORT.md  README.md  SOUL.md  TODO.md  package.json
agent-context/: AGENTS.md
agents/: the-analyst.md  the-librarian.md  the-scholar.md  the-storyteller.md  the-strategist.md
bulk-omics-clustering/: SKILL.md
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  definitions.py
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/R/: README.md  run_pipes_example.R
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/defs/: __init__.py  checks.py  config.py  resources.py
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/defs/assets/: __init__.py  analysis.py  processed.py  raw.py  results.py
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/io_managers/: __init__.py  anndata.py  dataframe.py  figure.py
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/lib/: __init__.py  analysis.py  qc.py
templates/cookiecutter-dagster-bio-pipeline/{{ cookiecutter.project_slug }}/tests/: test_definitions.py  test_lib.py
(+441 files in other folders)
