[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Dagster-based computational biology pipeline for {{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }},<4.0"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
dependencies = [
  "anndata>=0.11",
  "dagster>=1.12",
  "dagster-dg-cli>=1.12",
  "dagster-pipes>=1.12",
  "dagster-webserver>=1.12",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pyarrow>=18.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "{{ cookiecutter.package_name }}"
defs_module = "{{ cookiecutter.package_name }}.defs"
code_location_target_module = "{{ cookiecutter.package_name }}.definitions"
code_location_name = "{{ cookiecutter.project_slug }}"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
